syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "session.proto";

service Filesystem {
    // list the contents of a directory
    rpc FilesystemDir (FilesystemDirRequest) returns (FilesystemDirResponse);

    // stream any updates to the contents of a directory
    rpc FilesystemDirStream (FilesystemDirStreamRequest) returns (stream FilesystemDirStreamResponse);

    // get information about a file
    rpc FilesystemFileInfo (FilesystemFileInfoRequest) returns (FilesystemFileInfoResponse);

    // stream any updates to a file
    rpc FilesystemFileInfoStream (FilesystemFileInfoStreamRequest) returns (stream FilesystemFileInfoStreamResponse);    


    // // read file stream
    //  rpc FilesystemFileReadStream (FilesystemFileReadStreamRequest) returns (stream FilesystemFileReadStreamResponse);

    // // write file stream
    // rpc FilesystemFileWriteStream (FilesystemFileWriteStreamRequest) returns (stream FilesystemFileWriteStreamResponse);

    // create directory
    rpc FilesystemMakeDir (FilesystemMakeDirRequest) returns (google.protobuf.Empty);

    //  copy
    rpc FilesystemCopy (FilesystemCopyRequest) returns (google.protobuf.Empty);

    //  move
    rpc FilesystemMove (FilesystemMoveRequest) returns (google.protobuf.Empty);

    // remove
    rpc FilesystemRemove (FilesystemRemoveRequest) returns (google.protobuf.Empty);

    // chmod
    rpc FilesystemChmod (FilesystemChmodRequest) returns (google.protobuf.Empty);

    // chown
    rpc FilesystemChown (FilesystemChownRequest) returns (google.protobuf.Empty);


}

message FileInfo {
    string name = 1;
    int64 size = 2;
    uint32 mode = 3;
    google.protobuf.Timestamp updated = 4;
    bool isDir = 5;
}

enum FileAction {
    FILE_ACTION_UNKNOWN = 0; 
    FILE_ACTION_CREATE = 1;
    FILE_ACTION_WRITE = 2;
    FILE_ACTION_REMOVE = 3;
    FILE_ACTION_RENAME = 4;
    FILE_ACTION_CHMOD = 5;
}

message FilesystemDirRequest {
    Session session = 1;
    string directory = 2;
}

message FilesystemDirResponse {
    repeated FileInfo files = 1;
}

message FilesystemDirStreamRequest {
    Session session = 1;
    string directory = 2;
}

message FilesystemDirStreamResponse {
    FileInfo file = 1;
    FileAction action = 2;
    string error = 15;
}

message FilesystemFileInfoRequest {
    Session session = 1;
    string path = 2;
}

message FilesystemFileInfoResponse {
    FileInfo file = 1;
}

message FilesystemFileInfoStreamRequest {
    Session session = 1;
    string path = 2;
}

message FilesystemFileInfoStreamResponse {
    FileInfo file = 1;
    FileAction action = 2;
    string error = 15;
}

// message FilesystemFileReadStreamRequest {
//     Session session = 1;
//     string path = 2;
// }

// message FilesystemFileReadStreamResponse {
//     bytes data = 1;
//     string error = 15;
// }

// message FilesystemFileWriteStreamRequest {
//     Session session = 1;
//     string path = 2;
//     bytes data = 3;
// }

message FilesystemMakeDirRequest {
    Session session = 1;
    string path = 2;
    uint32 perm =3;
}


message FilesystemCopyRequest {
    Session session = 1;
    string source = 2;
    string dest = 3;
}


message FilesystemMoveRequest {
    Session session = 1;
    string source = 2;
    string dest = 3;
}


message FilesystemRemoveRequest {
    Session session = 1;
    string path = 2;
    bool recursive = 3;
}


message FilesystemChmodRequest {
    Session session = 1;
    string path = 2;
    uint32 mode = 3;
}


message FilesystemChownRequest {
    Session session = 1;
    string path = 2;
    int32 uid = 3;
    int32 gid = 4;
}

